--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
             "name": "Debug with GDB",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/bin/my_program", // Path to your executable
-            "args": [], // Add program arguments here if needed
+            "program": "${workspaceFolder}/bin/poisson_gs", // Path to your executable
+            "args": ["3", "10", "0.01", "0"], // Program arguments
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}", // Set the working directory
+            "cwd": "${workspaceFolder}", // Working directory
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -18,8 +18,7 @@
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 }
-            ],
-            "preLaunchTask": "build" // Ensures the build task runs before debugging
+            ]
         }
     ]
 }
